; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-file.c_hash_object_file.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-file.c_hash_object_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@MAX_HEADER_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hash_object_file(i8* %0, i64 %1, i8* %2, %struct.object_id* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.object_id*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.object_id* %3, %struct.object_id** %8, align 8
  %12 = load i32, i32* @MAX_HEADER_LEN, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %9, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %10, align 8
  %16 = trunc i64 %13 to i32
  store i32 %16, i32* %11, align 4
  %17 = load i8*, i8** %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = load %struct.object_id*, %struct.object_id** %8, align 8
  %21 = call i32 @write_object_file_prepare(i8* %17, i64 %18, i8* %19, %struct.object_id* %20, i8* %15, i32* %11)
  %22 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %22)
  ret i32 0
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @write_object_file_prepare(i8*, i64, i8*, %struct.object_id*, i8*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
